plugins/blur: Update blur region when decoration is destroyed

Otherwise the blur effect will keep the ItemEffect around, which will
block direct scanout.

BUG: 505887